# p50Analysis

./: .gitignore  CMakeLists.txt  FindROOT.cmake  GNUmakefile  PROSPECT-G4.cc  README.txt  ShortBaseline_v1_01.cc  initROOT.py  lookAtTrace.py
Aux/BGSpectra/: Aug29N_flux.txt  Goldhagen_Watson_Roof.txt  Nov20AA_flux.txt  gamma_Aug28P_unfold.txt  gamma_Aug28R_unfold.txt  gamma_Jun30_unfold.txt
Aux/NuclearDecays/: Co60.txt  ElectronBindingEnergy.txt  K40.txt
Aux/ReactorSpectra/: Dwyer_Langford_Pu239.txt  Dwyer_Langford_Pu241.txt  Dwyer_Langford_U235.txt  Dwyer_Langford_U238.txt
doc/: Doxyfile
include/: CosmicCosineGenerator.hh  CosmicMuonGenerator.hh  CosmicNeutronGenerator.hh  CosmicNeutronMessenger.hh  DetectorConstruction.hh  DetectorMessenger.hh  Event.hh  EventAction.hh  EventLinkDef.h  EventMessenger.hh  HadronPhysics.hh  InverseBetaKinematics.hh  InverseBetaMessenger.hh  IonisationHit.hh  IonisationSD.hh  IonisationScorer.hh  LogSession.hh  MuonPhysics.hh  NeutronDetectionScorer.hh  NeutronHit.hh  OpticalPhysics.hh  PhotoMultiplierScorer.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  ProtonHit.hh  RecoilProtonScorer.hh  RootIO.hh  RunAction.hh  RunMessenger.hh  StackingAction.hh  SteppingAction.hh  SteppingVerbose.hh  TrackInformation.hh  TrackingAction.hh  Utilities.hh
include/EventGen/: CRYModule.hh  Cf252Module.hh  CosineThrower.hh  CosmicCosineGenerator.hh  CosmicMuonGenerator.hh  CosmicMuonMessenger.hh  CosmicMuonModule.hh  CosmicNeutronGenerator.hh  CosmicNeutronMessenger.hh  CosmicNeutronModule.hh  DecaySourceModule.hh  DirectionThrower.hh  DwyerLangford.hh  FissionAntiNuGenerator.hh  FissionAntiNuMessenger.hh  FissionAntiNuModule.hh  GenPtclModule.hh  HistogramModule.hh  IBDModule.hh  InputSession.hh  InverseBetaKinematics.hh  InverseBetaMessenger.hh  LLNLFissModule.hh  NuclEvtGen.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RNGWrapper.hh  SatoNiitaNeutrons.hh  SimpleBGModule.hh  SurfaceThrower.hh  ThermalNModule.hh  VertexPositioner.hh
include/FaNS/: DIMABuilder.hh  DIMADetectorConstruction.hh  FNSDetectorConstruction.hh  FaNS2DetectorConstruction.hh
include/Geometry/: Builder.hh  BuildingBuilder.hh  DetVolBuilder.hh  DetectorConstruction.hh  FluxCounterBuilder.hh  GeomHelper.hh  HFIRCoreBuilder.hh  MaterialsHelper.hh  OpticalSurfaceSetup.hh  PMTBuilder.hh  PR20CellBuilder.hh  PR20ShieldBuilder.hh  PR2ShieldBuilder.hh  PinwheelRodBuilder.hh  PinwheelTankBuilder.hh  ScatterSlabBuilder.hh  ScintCellBuilder.hh  ScintLayer.hh  ScintSegVol.hh  ScintTankBuilder.hh  SeparatorBuilder.hh  ShieldBuilder.hh  SlottedRodBuilder.hh  SphereShellBuilder.hh  TankLidBuilder.hh
include/Output/: AnalysisTypes.hh  CommandInfo.hh  Event.hh  EventLinkDef.h  FileIO.hh  HDF5_IO.hh  HDF5_StructInfo.hh  HDF5_Table_Cache.hh  PathUtils.hh  ProcessInfo.hh  RootIO.hh  SMExcept.hh  Stringmap.hh  VisSetup.hh  XMLProvider.hh  XSDump.hh  strutils.hh
include/Physics/: BetaSpectrum.hh  DecayPhysics.hh  EMPhysics.hh  ElectronBindingEnergy.hh  FloatErr.hh  GdNeutronHPCaptureFS.hh  HadronPhysics.hh  PhysicsList.hh  StepMax.hh
include/Tracking/: FluxCounterSD.hh  IoniSD.hh  IonisationSD.hh  MuVetoSD.hh  NeutronHit.hh  OptCounterSD.hh  OpticalHit.hh  OpticalTrajectory.hh  PhotoMultiplierScorer.hh  ProtonHit.hh  ScintSD.hh  SecParticleCounterSD.hh  TrackingAction.hh  WeightAverager.hh
mac/: CRY_Template.mac  G4History.macro  JobLauncher.py  LaunchSims.py  ScatterSlab_Template.mac  TestCell_Template.mac  XSDump.mac  calib.mac  calibtest.mac  crytest.mac  electest.mac  filetest.mac  gammatest.mac  inverse2.mac  spheretest.mac
mac/Analysis/: .gitignore  AnaUtils.cc  AnaUtils.hh  CalcDetectorResponse.cc  CalcQuenchingCurve.cc  ComparePlots.cc  ComparePlots.cpp  FileKeeper.hh  GoldhagenSpectrum.cc  GoldhagenSpectrum.hh  Makefile  MuVeto.cc  MuonCal.cc  PathUtils.hh  PlotFlux.cc  PlotFlux.cpp  PlotIBD.cc  PlotPos.cc  PlotPos.cpp  PlotPrimaries.cc  PlotPrimaries.cpp  PlotSingles.cc  PlotXS.cc  PrintHDF5Events.cc  ProtonSlab.cc  TestCell.cc  XMLInfo.cc  XMLInfo.hh  nScatter.cc  strutils.cc  strutils.hh
mac/Examples/: cosmic_neutron_bg.mac  enable_vis.mac
mac/Old/: cosmicMu.mac  electestvis.mac  electron.mac  inverse.mac  inverseSeq.mac  vis.mac  vis_cry.mac  vis_single.mac
mac/Templates/: CRY_Template.mac  DIMA_Co60.mac  P20_muBG.mac  P20_nBG.mac  P2k_IBD.mac  P2k_nBG.mac
src/: CosmicCosineGenerator.cc  CosmicMuonGenerator.cc  CosmicNeutronMessenger.cc  DetectorConstruction.cc  DetectorMessenger.cc  EMPhysics.cc  Event.cc  EventAction.cc  EventMessenger.cc  GdCaptureGammas.cc  GdNeutronHPCapture.cc  GdNeutronHPCaptureFS.cc  HadronPhysics.cc  InputSession.cc  InverseBetaKinematics.cc  InverseBetaMessenger.cc  IonisationHit.cc  IonisationSD.cc  IonisationScorer.cc  LogSession.cc  MuonPhysics.cc  NeutronDetectionScorer.cc  NeutronHit.cc  OpticalHit.cc  OpticalPhysics.cc  OpticalTrajectory.cc  PhotoMultiplierScorer.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  ProtonHit.cc  RecoilProtonScorer.cc  RootIO.cc  RunAction.cc  RunMessenger.cc  StackingAction.cc  SteppingAction.cc  SteppingVerbose.cc  TrackInformation.cc  TrackingAction.cc
src/EventGen/: CRYModule.cc  Cf252Module.cc  CosineThrower.cc  CosmicCosineGenerator.cc  CosmicMuonGenerator.cc  CosmicMuonMessenger.cc  CosmicMuonModule.cc  CosmicNeutronGenerator.cc  CosmicNeutronMessenger.cc  CosmicNeutronModule.cc  DecaySourceModule.cc  DirectionThrower.cc  DwyerLangford.cc  FissionAntiNuGenerator.cc  FissionAntiNuMessenger.cc  FissionAntiNuModule.cc  GenPtclModule.cc  HistogramModule.cc  IBDModule.cc  InputSession.cc  InverseBetaKinematics.cc  InverseBetaMessenger.cc  LLNLFissModule.cc  NuclEvtGen.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  SatoNiitaNeutrons.cc  SimpleBGModule.cc  SurfaceThrower.cc  ThermalNModule.cc  VertexPositioner.cc
src/FaNS/: DIMABuilder.cc  DIMADetectorConstruction.cc  FNSDetectorConstruction.cc  FaNS2DetectorConstruction.cc
src/Geometry/: Builder.cc  BuildingBuilder.cc  DetVolBuilder.cc  DetectorConstruction.cc  (+22 more)
(+70 files in other folders)
